# DynamoField

./: .gitignore  0_init.bat  0_init.sh  1_dynamodb.py  1_start_dynamoDB.bat  1_start_dynamoDB.sh  2_dynamofield.sh  2_run_DynamoField.bat  2_run_DynamoField.sh  2_run_dynamofield.bat  README.md  dynamo_utils.py  dynamodb_init.py  field.py  field_analysis.py  field_testing.py  field_utils.py  init_db.py  json_utils.py  put_yield.py  pyproject.toml  query_data.py  query_data_trial.py  requirements.txt  setup.cfg  simulate_data.py  testing_field.py  testing_framework.sh  testing_import.py
example_OFT/: oft_key_copyright.csv  oft_trial_2018_7_key_info.csv  oft_trial_2018_7_key_results1.csv  oft_trial_9176077_2019_107_key_info.csv  oft_trial_9176077_2019_107_key_results1.csv  oft_trial_9176077_2019_107_key_results10.csv  oft_trial_9176077_2019_107_key_results11.csv  oft_trial_9176077_2019_107_key_results12.csv  oft_trial_9176077_2019_107_key_results14.csv  oft_trial_9176077_2019_107_key_results15.csv  oft_trial_9176077_2019_107_key_results16.csv  oft_trial_9176077_2019_107_key_results17.csv  oft_trial_9176077_2019_107_key_results18.csv  oft_trial_9176077_2019_107_key_results19.csv  oft_trial_9176077_2019_107_key_results2.csv  oft_trial_9176077_2019_107_key_results20.csv  oft_trial_9176077_2019_107_key_results21.csv  oft_trial_9176077_2019_107_key_results22.csv  oft_trial_9176077_2019_107_key_results23.csv  oft_trial_9176077_2019_107_key_results24.csv  oft_trial_9176077_2019_107_key_results25.csv  oft_trial_9176077_2019_107_key_results3.csv  oft_trial_9176077_2019_107_key_results4.csv  oft_trial_9176109_key_info.csv  (+83 more)
(+111 files in other folders)
