[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamofield"
version = "0.0.1"
authors = [
  { name="Steven Wu", email="stevenwu@ntu.edu.tw" },
]
description = "Flexible database framework for field trial data"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ComputationalAgronomy/field-trial-dynamodb"
"Bug Tracker" = "https://github.com/ComputationalAgronomy/field-trial-dynamodb/issues"

[project.scripts]
dynamofield = "dynamofield:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[flake8]
per-file-ignores = "tests/*: E501"  # E501 line too long